@@ -43,6 +43,8 @@ logm|Log.log(Log.MESSAGE,this,\|);
 logd|Log.log(Log.DEBUG,this,\|);
 Cget|($1)$2.get($3)
 CtoArray|($1[])$2.toArray(new $1[$2.size()])
+WI|while($1.hasNext())\n{\n\t|\n}
+IN|($1)$2.next();
 [vhdl]
 sl|std_logic
 slv|std_logic_vector( x downto y )
